[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eplictablobretriever"
version = "0.0.30"
authors = [
  { name="James Frih", email="james.frih@gruppera.se" },
]
description = "Tool used to retrieve blobs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer==0.7.0",
    "configparser",
    "pathvalidate==2.5.2",
    "azure-storage-blob==12.15.0"
]

[project.urls]
"Homepage" = "https://github.com/Eplicta/eplictablobretriever"